<resources>
    <string name="app_name">Groceries Store</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="get_started">Get Started</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shop">Shop</string>
    <string name="explore">Explore</string>
    <string name="favourite">Favourite</string>
    <string name="profile">Profile</string>
    <string name="add_to_basket">Add to Basket</string>
    <string name="nutritions">Nutritions</string>
    <string name="description">Description</string>
    <string name="reviews">Reviews</string>
    <string name="welcome_prompt">Hello, new grocery and gourmet foods just arrived !</string>
    <string name="exclusive_offer">Exclusive Offer</string>
    <string name="see_all">See all</string>
    <string name="best_selling">Best Selling</string>
    <string name="recommended">Recommended</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="cart">Cart</string>
    <string name="line_item_image">Line Item image</string>
    <string name="fab">Fab</string>
    <string name="my_basket">My Basket</string>
</resources>